--- a/my-website/package.json
+++ b/my-website/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "next-app-template",
 	"version": "0.0.1",
-	"private": true,
+	"private": false,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
